# PracticeDawn

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt
app/src/: cam_ctrl.cpp  cam_ctrl.hpp  main.cpp  sdl_window.cpp  sdl_window.hpp
assets/shaders/: cube.wgsl  triangle.wgsl
lib/wgpu/: CMakeLists.txt
lib/wgpu/include/: device.hpp  renderer.hpp  transform.hpp
lib/wgpu/src/: device.cpp  renderer.cpp  transform.cpp
src/: main.cpp
